add tourist spot page done

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active{
+    background-color: rgb(139 92 246) !important;
+    
+     color: white !important;
+ }
